--- a/Xiropht-Solo-Miner/Xiropht-Solo-Miner.csproj
+++ b/Xiropht-Solo-Miner/Xiropht-Solo-Miner.csproj
@@ -38,7 +38,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -78,6 +78,7 @@
     <Compile Include="Algo\ClassAlgoMining.cs" />
     <Compile Include="Cache\ClassMiningCache.cs" />
     <Compile Include="ConsoleMiner\ClassConsole.cs" />
+    <Compile Include="Setting\ClassStartupArgumentEnumation.cs" />
     <Compile Include="Token\ClassTokenNetwork.cs" />
     <Compile Include="Utility\ClassUtility.cs" />
     <Compile Include="Program.cs" />
