--- a/Xiropht-Solo-Miner/Xiropht-Solo-Miner.csproj
+++ b/Xiropht-Solo-Miner/Xiropht-Solo-Miner.csproj
@@ -79,7 +79,9 @@
     <Compile Include="Cache\ClassMiningCache.cs" />
     <Compile Include="ConsoleMiner\ClassConsole.cs" />
     <Compile Include="Mining\ClassMining.cs" />
+    <Compile Include="Mining\ClassMiningMath.cs" />
     <Compile Include="Mining\ClassMiningNetwork.cs" />
+    <Compile Include="Mining\ClassMiningStats.cs" />
     <Compile Include="Setting\ClassStartupArgumentEnumation.cs" />
     <Compile Include="Token\ClassTokenNetwork.cs" />
     <Compile Include="Utility\ClassUtility.cs" />
