--- a/App.config
+++ b/App.config
@@ -5,5 +5,8 @@
     </startup>
   <runtime>
     <gcAllowVeryLargeObjects enabled="true"/>
+    <gcServer enabled="true"/>
+    <GCHeapCount enabled="10"/>
+    <GCNoAffinitize enabled="true"/>
   </runtime>
 </configuration>
