--- a/Xiropht-Solo-Miner.csproj
+++ b/Xiropht-Solo-Miner.csproj
@@ -40,19 +40,19 @@
     <Prefer32Bit>false</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
+    <ErrorReport>none</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>
@@ -84,7 +84,7 @@
     <Compile Include="Mining\ClassMiningMath.cs" />
     <Compile Include="Mining\ClassMiningNetwork.cs" />
     <Compile Include="Mining\ClassMiningStats.cs" />
-    <Compile Include="Setting\ClassStartupArgumentEnumation.cs" />
+    <Compile Include="Setting\ClassStartupArgumentEnumeration.cs" />
     <Compile Include="Token\ClassTokenNetwork.cs" />
     <Compile Include="Utility\ClassUtility.cs" />
     <Compile Include="Program.cs" />
